--- a/styles/style.css
+++ b/styles/style.css
@@ -10,10 +10,9 @@ html {
 
 .page {
   inline-size: 1200px;
-  block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
 }
@@ -26,13 +25,281 @@ p,
 ul,
 ol,
 li,
+br,
 blockquote,
-fieldset {
+fieldset,
+video,
+input,
+button {
   margin: 0;
   padding: 0;
+  letter-spacing: normal;
+  line-height: normal;
+}
+
+fieldset,
+input,
+button {
+  outline: none;
+  border: none;
+  background: transparent;
+}
+
+video,
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+a {
+  display: inline-block;
+  text-decoration: none;
+  color: initial;
 }
 
 ul,
 ol {
   list-style: none;
+}
+
+input {
+  appearance: none;
+}
+
+.content {
+  max-width: 1144px;
+  margin: 134px auto;
+  display: grid;
+  grid-template-columns: 1fr 399px;
+  grid-template-rows: 534px;
+  gap: 32px;
+}
+
+.result {
+  padding-top: 70px;
+}
+
+.result__video-container {
+  position: relative;
+}
+
+.result__video {
+  height: 386px;
+}
+
+.search-form {
+  display: grid;
+  grid-template-columns: 227px 1fr 194px;
+  gap: 38px;
+  margin-top: 11px;
+}
+
+.search-form__fieldset-title {
+  padding-left: 2px;
+}
+
+.search-form__fieldset-title,
+.search-form__submit-button,
+.search-form__textfield,
+.search-form__textfield::placeholder {
+  color: #fff;
+  font-size: 18px;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 400;
+}
+
+.search-form__textfield {
+  width: 100%;
+  height: 27px;
+  margin-top: 4px;
+  border: none;
+  background: transparent;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+}
+
+.search-form__textfield::placeholder {
+  letter-spacing: -0.3px;
+}
+
+.search-form__checkbox-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 5px;
+  text-align: right;
+  gap: 10px;
+}
+
+.search-form__label {
+  position: relative;
+  cursor: pointer;
+}
+
+.search-form__pseudo-checkbox {
+  display: inline-block;
+  position: absolute;
+  top: 4px;
+  left: 5px;
+
+  width: 13px;
+  height: 13px;
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+input[type="checkbox"]:checked+.search-form__pseudo-checkbox {
+  background-color: #fff;
+}
+
+.search-form__submit-button {
+  align-self: end;
+  border: 1px solid #fff;
+  line-height: 1.65;
+  font-weight: 700;
+}
+
+.content__details {
+  display: grid;
+  gap: 13px;
+}
+
+.title {
+  font-family: Oswald, sans-serif;
+  font-size: 75px;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 0.9;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__list,
+.content__list-item,
+.content__video-card {
+  display: grid;
+}
+
+.content__list {
+  position: relative;
+  overflow: scroll;
+  gap: 30px;
+  height: 298px;
+}
+
+.content__list-item {
+  padding: 2px;
+}
+
+.content__list::-webkit-scrollbar {
+  display: none;
+}
+
+.content__video-card-title {
+  font-family: Oswald, sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  font-size: 18px;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 400;
+  line-height: 0.9;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+}
+
+.content__video-card-title,
+.content__video-card-description {
+  color: #fff;
+  word-break: break-all;
+}
+
+.content__video-card-description {
+  word-break: break-all;
+}
+
+.content__video-card {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.more-button {
+  width: 99%;
+  background: transparent;
+  color: #fff;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  border: 1px solid #fff;
+  line-height: 30px;
+  margin: 2px;
+}
+
+.reloader {
+  position: absolute;
+}
+
+/* effects */
+
+.search-form__textfield:focus {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.search-form__textfield:active {
+  border: 1px solid #fff;
+}
+
+.search-form__submit-button:active,
+.more-button:active {
+  background: #545050;
+}
+
+.search-form__submit-button:hover,
+.more-button:hover {
+  text-decoration: underline;
+}
+
+.search-form__submit-button:focus,
+.more-button:focus {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.content__card-link:active {
+  background: #545050;
+}
+
+.content__card-link:hover {
+  text-decoration: #fff underline;
+}
+
+.content__card-link:focus {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__label-text:hover {
+  text-decoration: #fff underline;
+}
+
+.search-form__label:focus-within {
+  outline: 1px solid #fff;
 }
