--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ html {
 
 .page {
   inline-size: 1200px;
-  margin: auto;
+  margin: 0 auto;
   color: #fff;
   font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
