--- a/styles/style.css
+++ b/styles/style.css
@@ -92,10 +92,13 @@ input {
 
 .result__video-container {
   position: relative;
+  width: 711px;
+  height: 386px;
 }
 
 .result__video {
-  height: 386px;
+  width: 100%;
+  height: 100%;
 }
 
 .search-form {
