--- a/styles/style.css
+++ b/styles/style.css
@@ -127,7 +127,7 @@ input {
   height: 27px;
   margin-top: 4px;
   border: none;
-  background: transparent;
+  background: inherit;
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
 }
