--- a/styles/style.css
+++ b/styles/style.css
@@ -277,6 +277,7 @@ input {
 .search-form__submit-button:hover,
 .more-button:hover {
   text-decoration: underline;
+  cursor: pointer;
 }
 
 .search-form__submit-button:focus,
