--- a/styles/style.css
+++ b/styles/style.css
@@ -204,7 +204,7 @@ input {
 
 .content__list {
   position: relative;
-  overflow-y: scroll;
+  overflow-y: auto;
   gap: 30px;
   height: 298px;
 }
@@ -218,6 +218,9 @@ input {
   font-size: 30px;
   font-weight: 700;
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .content__video-card-description {
