--- a/styles/style.css
+++ b/styles/style.css
@@ -203,7 +203,7 @@ input {
   position: relative;
   overflow-y: auto;
   overflow-x: hidden;
-  gap: 30px;
+  gap: 24px;
   height: 303px;
 }
 
@@ -216,7 +216,7 @@ input {
 }
 
 .content__video-card {
-  grid-template-columns: repeat(2, 50%);
+  grid-template-columns: 200px 194px;
 }
 
 .content__video-card-description-container {
@@ -238,11 +238,6 @@ input {
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   line-height: 0.9;
-}
-
-.content__video-card-thumbnail {
-  max-width: 194px;
-  max-height: 103px;
 }
 
 .content__list-item-button {
