--- a/styles/style.css
+++ b/styles/style.css
@@ -141,14 +141,18 @@ input {
 }
 
 .search-form__checkbox-list {
+  display: flex;
+  /* 
+  не позиционировал по горизотали justify-content применил 
+  margin-left/rignt к .search-form__label чтоб было по perfict-pixel
+  */
   margin-top: 5px;
 }
 
 .search-form__checkbox-list>.search-form__label {
-  display: inline-block;
   position: relative;
-  margin-right: 10px;
-  padding-left: 25px;
+  margin-left: 26px;
+  margin-right: 14px;
   cursor: pointer;
 }
 
@@ -158,7 +162,6 @@ input {
 
 .search-form__label-text {
   display: inline-block;
-  /* width: 100%; */
   text-align: right;
 }
 
